# mass-tic-tac-toe

./: Cargo.toml  Dockerfile  upload-to-minikube.ps1  upload-to-minikube.sh
.github/workflows/: create_image.yml  create_latest_image.yml  deployment.yml  test_rust.yml
deployment/: Dockerfile
docker/: Dockerfile
kubernetes/: backend-deployment.yaml  client.yaml  frontend-deployment.yaml  frontend-service.yaml  hello-service.yaml  ingress.yml  master.yml  namespace.yml
nginx/: nginx.conf
src/: constants.rs  lib.rs  server.rs  session.rs
