[package]
name = "mass-tic-tac-toe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "master"

[[bin]]
name = "client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
actix = "0.13.0"
tokio = { version = "1.23.0", features = ["macros"] }
tokio-stream = "0.1.11"
awc = "3.0.1"
futures-util = "0.3.25"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.90"
parking_lot = "0.12.1"
